--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "minifp.doc.tar.xz": 8d8ed675c23e2b7d335965496fee18299773e52d
-  "minifp.source.tar.xz": ecb0c4e900766ecb17a482db69b1b73b36fe0a01
-  "minifp.tar.xz": a74d1134015535cca89859fca4da6d73478a5d20
+  minifp.doc.tar.xz: e1f9e483a12689846204a43535c451438b3ea530
+  minifp.source.tar.xz: 4388e6cfdf4914ba1c6e1d3207a6dc0fe61d42d8
+  minifp.tar.xz: 522545e63df1c84898c702f94c22e628663e3563
