--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  minifp.doc.tar.xz: e1f9e483a12689846204a43535c451438b3ea530
-  minifp.source.tar.xz: 4388e6cfdf4914ba1c6e1d3207a6dc0fe61d42d8
-  minifp.tar.xz: 522545e63df1c84898c702f94c22e628663e3563
+  minifp.doc.r32559.tar.xz: 7aa78ebcf4d9f69fffdefab562adcd2af8042ffd
+  minifp.r32559.tar.xz: 1f00d8234672e1c72dccbd984f858efe16972c85
+  minifp.source.r32559.tar.xz: cd80560e568f06539250b12f01a5d9145c28947a
